syntax = "proto3";

package product;

option go_package = "github.com/dipendra-mule/microservice-with-grpc/proto/product";

service ProductService {
    rpc CreateProduct(CreateProductRequest) returns (ProductResponse){};
    rpc GetProduct(GetProductRequest) returns (ProductResponse){};
    rpc ListProducts(ListProductsRequest) returns (ListProductsResponse){};
    rpc UpdateProduct(UpdateProductRequest) returns (ProductResponse){};
    rpc ValidateProduct(ValidateProductRequest) returns (ValidateProductResponse){};
}

message Product {
    stirng id = 1;
    string name = 2;
    string description = 3;
    float price = 4;
    int32 stock = 5;
    string category = 6;
    google.protobuf.Timestamp created_at = 7;
    google.protobuf.Timestamp updated_at = 8;
}

message GetProductRequest {
    string id = 1;
}

message ListProductsRequest {
    string category = 1;
    int32 page = 2;
    int32 limit = 3;
}

message ListProductsResponse {
    repeated Product products = 1;
    int32 total = 2;
    int32 page = 3;
    int32 limit = 4;
}

message UpdateProductRequest {
    string id = 1;
    string name = 2;
    string description = 3;
    float price = 4;
    int32 stock = 5;
}

message ValidateProductRequest {
    repeated ProductValidation items = 1;
}

message ProductValidation {
    string product_id = 1;
    int32 quantity = 2;
}

message ValidateProductResponse {
    bool valid = 1;
    repeated ValidationError errors = 2;
    repeated Product products = 3;
}

message ValidationError {
    string product_id = 1;
    int32 message = 2
}

message ProductResponse {
    Product product = 1;
}